# MCP_Server

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_GUIDE.md  CHANGELOG.md  CLAUDE_CLI_GUIDE.md  DATABASE_RESET_GUIDE.md  DATABASE_SCHEMA_ALIGNMENT_PROMPT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FIX_SUPABASE_RPC_SCHEMA_MISMATCH.md  RAG_PIPELINE_GUIDE.md  README.md  README_LEGAL_RAG.md  TEAM_SETUP_GUIDE.md  api_key_auth.py  api_key_auth_db.py  fix_pgcrypto.sql  legal_rag_server.py  legal_rag_utils.py  manage_api_keys.py  pyproject.toml  reset_database.py  show_all_orgs.sql  show_documents.py  test_issue24_fix.py  test_issue_24.py  test_mcp_search.py
.claude/: settings.local.json
.claude/commands/: checkpoint.md
docs/: API_KEY_MANAGEMENT.md
migrations/: 001_create_api_keys_tables.sql  README.md  WORKING_COMPLETE_STRUCTURE.sql
migrations/archive/: 000_COMPLETE_STRUCTURE.sql  000b_USE_MD5_ALTERNATIVE.sql  001_create_api_keys_tables.sql  002_add_email_to_api_keys.sql  002b_fix_email_constraint.sql  003_add_tier_based_limits.sql  004_organizations_and_limits.sql  004b_fix_type_mismatch.sql  005_split_individuals_into_separate_orgs.sql  005b_fix_digest_type_casting.sql  PHASE2_test_digest_function.sql  PHASE6_verify_fix.sql  PHASE7_test_api_key_creation.md  TEST_005_verify_migration.sql
specs/api-key-authentication/: PHASE3A_DEPLOYMENT_STEPS.md  PHASE3B_TIER_BASED_LIMITS.md  PHASE3C_ORGANIZATION_LIMITS.md  (+4 more)
test/: TESTING_GUIDE.md
test and fixes/: TESTING_GUIDE.md  TROUBLESHOOTING_DIGEST_FUNCTION.md  diagnose_and_fix_digest.py  test_legal_rag.py
(+3 files in other folders)
