[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "supabase>=2.10.0",
    "openai>=1.57.4",
    "cohere>=5.12.0",
    "numpy>=1.26.0",
]
